lecture status, load more btns

--- a/src/app/pages/admin/admin-confirm-courses/admin-confirm-courses.component.html
+++ b/src/app/pages/admin/admin-confirm-courses/admin-confirm-courses.component.html
@@ -31,6 +31,8 @@
                          
                         </tbody>
                     </table>
+                    <a *ngIf="coursesArray.length < totalCourses" (click)="onScroll()" style="color: blue;">{{"load more..." | translate}}</a>
+
                     <div *ngIf="loading" class="col-md-12">
                         <div class="main-loader mt-20">
                             <div class="spinner">
