--- a/src/app/pages/admin/admin-instructors-list/admin-instructors-list.component.html
+++ b/src/app/pages/admin/admin-instructors-list/admin-instructors-list.component.html
@@ -39,6 +39,8 @@
 
                         </tbody>
                     </table>
+                    <a *ngIf="instructorsArray.length < totalInstructors" (click)="onScroll()" style="color: blue;">{{"load more..." | translate}}</a>
+
                     <div *ngIf="loading" class="col-md-12">
                         <div class="main-loader mt-20">
                             <div class="spinner">
