--- a/src/app/pages/admin/admin-students-all-courses/admin-students-all-courses.component.html
+++ b/src/app/pages/admin/admin-students-all-courses/admin-students-all-courses.component.html
@@ -101,6 +101,9 @@
                         <button *ngIf="enrollmentStudentsArray.length" class="float accept-btn mx-2" (click)="onExportClick('studentsTablePayments','xlsx')">{{"Export" | translate}} {{enrollmentStudentsArray.length}} </button>
 
                     </table>
+
+                     <a *ngIf="enrollmentStudentsArray.length < totalStudents" (click)="onScroll(search.value)" style="color: blue;">{{"load more..." | translate}}</a>
+
                     <p *ngIf="!enrollmentStudentsArray.length && !loading">{{"No result found" | translate}}</p>
                     <div *ngIf="loading" class="col-md-12">
                         <div class="main-loader mt-20">
