--- a/src/app/pages/idmpage/idmpage.component.html
+++ b/src/app/pages/idmpage/idmpage.component.html
@@ -1,5 +1,5 @@
 
-
+<div class="bg"></div>
 <div class="idmPage">
   <div>
     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-exclamation-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
